Forum: Fix layout issues with forms in modal

--- a/templates/default/less/Modules/Forum/delos.less
+++ b/templates/default/less/Modules/Forum/delos.less
@@ -222,3 +222,7 @@ div.ilFrmPostHeader span.small {
 .frm-thread-scrollable-print {
 	overflow: auto;
 }
+
+.ilForumNotificationSettingsForm {
+	white-space: normal;
+}
